	* Incremented the package version to 0.13.3.
	* Incremented the library version to 9:3:6.
2017-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a SyLwrpClient::node()' method.
	* Changed SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MIN to 5000.
	* Changed SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MAX to 10000.
	* Fixed a bug in SyLwrpClient that caused node connection failure
	to not be reported when connected using 'persistent=false'.
2017-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::src()' method.
	* Added a 'SyLwrpClient::dst()' method.
	* Added syastringtest(1) in 'tests/syastringtest.cpp' and
	'tests/syastringtest.h'.
2017-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyNode::dump()' method.
	* Added a 'SySource::dump()' method.
	* Added a 'SyDestination::dump()' method.
2017-09-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyInterfaces' class in 'sy/syinterfaces.cpp' and
	'sy/syinterfaces.h'.
2017-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.14.0.
	* Incremented the library version to 10:0:7.
2017-10-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SySource' where internal parameters were not properly
	initialized in the default constructor.
2017-10-03 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyLwrpClient::isConnected()' method.
2017-10-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyLwrpClient' that caused altered GPIO code strings
	to remain upper-case after the update was processed.
2017-10-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 11:0:8.
	* Incremented the package version to 0.15.0.
2017-10-23 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::clipAlarmActive()' method.
	* Added a 'SyLwrpClient::silenceAlarmActive()' method.
2017-10-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 12:0:9.
	* Incremented the package version to 0.16.0.