@@ -24,11 +24,14 @@ class SyProfileLine
   void setTag(QString tag);
   QString value() const;
   void setValue(QString value);
+  bool used() const;
+  void setUsed(bool state);
   void clear();
 
  private:
   QString line_tag;
   QString line_value;
+  bool line_used;
 };
 
 
@@ -39,8 +42,10 @@ class SyProfileSection
   QString name() const;
   void setName(QString name);
   bool getValue(QString tag,QString *value) const;
+  void setValueUsed(QString tag,bool state);
   void addValue(QString tag,QString value);
   void clear();
+  QStringList unusedLines() const;
 
  private:
   QString section_name;
@@ -57,17 +62,17 @@ class SyProfile
   bool setSource(const QString &filename);
   bool setSource(std::vector<QString> *values);
   QString stringValue(const QString &section,const QString &tag,
-		      const QString &default_value="",bool *ok=0) const;
+		      const QString &default_value="",bool *ok=0);
   int intValue(const QString &section,const QString &tag,
-	       int default_value=0,bool *ok=0) const;
+	       int default_value=0,bool *ok=0);
   int hexValue(const QString &section,const QString &tag,
-	       int default_value=0,bool *ok=0) const;
+	       int default_value=0,bool *ok=0);
   float floatValue(const QString &section,const QString &tag,
-		   float default_value=0.0,bool *ok=0) const;
+		   float default_value=0.0,bool *ok=0);
   double doubleValue(const QString &section,const QString &tag,
-		    double default_value=0.0,bool *ok=0) const;
+		    double default_value=0.0,bool *ok=0);
   bool boolValue(const QString &section,const QString &tag,
-		 bool default_value=false,bool *ok=0) const;
+		 bool default_value=false,bool *ok=0);
   QTime timeValue(const QString &section,const QString &tag,
 		  const QTime &default_value=QTime(),bool *ok=0);
   QHostAddress addressValue(const QString &section,const QString &tag,
@@ -76,6 +81,7 @@ class SyProfile
   QHostAddress addressValue(const QString &section,const QString &tag,
 			    const QString &default_value="",bool *ok=0);
   void clear();
+  QStringList unusedLines() const;
 
  private:
   QString profile_source;
